# prisme-saas

./: .env.authentik.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.backend.prod  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  docker-compose.authentik-dev.yml  docker-compose.authentik.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  mkdocs.yml  prism.config.py  pyproject.toml
.devcontainer/: .env.template  Dockerfile.dev  devcontainer.json  docker-compose.yml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  terraform.yml
.prism/: manifest.json  overrides.json  overrides.md
.prism/diffs/: packages_backend_src_prisme_api_api_rest_api_key.py.diff  packages_backend_src_prisme_api_api_rest_auth.py.diff  packages_backend_src_prisme_api_api_rest_subdomain.py.diff  packages_backend_src_prisme_api_api_rest_user.py.diff  packages_backend_src_prisme_api_services_subdomain.py.diff  packages_frontend_src_router.tsx.diff
deploy/: README.md
deploy/authentik/blueprints/: 00-password-policy.yaml  01-github-oauth.yaml  01-prompt-fields.yaml  02-authentication.yaml  02-email-password.yaml  02-enrollment-flow.yaml  03-authentication-flow.yaml  03-totp-mfa.yaml  04-recovery-flow.yaml  05-oauth-provider.yaml  06-github-source.yaml  07-branding.yaml  08-totp-mfa.yaml  email-password.yaml  github-oauth.yaml  madewithprisme.yaml
deploy/authentik/media/branding/: README.md
deploy/authentik/templates/email/: account_confirmation.html  base.html  password_reset.html
deploy/env/: .env.production.template  .env.staging.template
deploy/scripts/: deploy.sh  generate-authentik-credentials.sh  rollback.sh  setup-github-secrets.sh
deploy/terraform/: main.tf  outputs.tf  production.tfvars  staging.tfvars  variables.tf  versions.tf
deploy/terraform/cloud-init/: user-data.yml
deploy/terraform/modules/server/: main.tf  variables.tf
deploy/terraform/modules/volume/: main.tf
deploy/traefik/: traefik.yml
deploy/traefik/dynamic/: infrastructure.yml
docker/: Dockerfile  docker-compose.yml
docs/: PRISM_DEPLOY_FEEDBACK.md  index.md
docs/api/: api-keys.md  authentication.md  index.md  subdomains.md  users.md
docs/cli/: auth.md  index.md  subdomain.md
docs/getting-started/: index.md  quickstart.md
scripts/: bootstrap-authentik-dev.sh  check-migrations.sh  ensure-devcontainer.sh  test-dns-flow.sh
specs/: models.py
